change header in theme_links to use filter_xss instead of checkplain so we can wrap headings in markup, reformat forms scss, fix borked path for logo icon on theme settings

--- a/at_subtheme/sass/global.forms.scss
+++ b/at_subtheme/sass/global.forms.scss
@@ -5,48 +5,61 @@
 
 // Wrapper for a form element (or group of form elements) and its label
 .form-item {
-  margin: 18px 0; }
+  margin: 18px 0;
+}
 
 // Focus styles for accessibility and usabiltiy
-.form-text:focus, .form-checkbox:focus, .form-radio:focus, .form-select:focus {
+.form-text:focus,
+.form-checkbox:focus,
+.form-radio:focus,
+.form-select:focus {
   border: 1px solid #fc0;
-  background: #ffffdf; }
+  background: #ffffdf;
+}
 
 textarea:focus {
   border: 1px solid #fc0;
-  background: #fff; }
+  background: #fff;
+}
 
 .form-item {
-
   // Highlight the form elements that caused a form submission error
   input.error, textarea.error, select.error {
-    border: 1px solid #c00; }
-
+    border: 1px solid #c00;
+  }
   // The label for a form element
   label {
     display: block;
     font-weight: bold;
-
     // The label for a radio button or checkbox
     &.option {
       display: inline;
-      font-weight: normal; } } }
+      font-weight: normal;
+    }
+  }
+}
 
 // The part of the label that indicates a required field
 .form-required {
-  color: #c00; }
+  color: #c00;
+}
 
 // The descriptive help text (separate from the label)
 .form-item .description {
-  font-size: .857em; }
+  font-size: .75em;
+}
 
-.form-type-radio .description, .form-type-checkbox .description {
-  margin-left: 0; }
+.form-type-radio .description,
+.form-type-checkbox .description {
+  margin-left: 0;
+}
 
 // Pack groups of checkboxes and radio buttons closer together
-.form-checkboxes .form-item, .form-radios .form-item {
+.form-checkboxes .form-item,
+.form-radios .form-item {
   // Drupal core uses "0.4em 0"
-  margin: 0; }
+  margin: 0;
+}
 
 // The submit button
 .form-submit {}
@@ -54,7 +67,9 @@ textarea:focus {
 // Inline labels and form divs
 .container-inline {
   div, label {
-    display: inline; } }
+    display: inline;
+  }
+}
 
 // Fieldsets
 fieldset {
@@ -63,7 +78,9 @@ fieldset {
   margin: 10px 0;
   padding: 10px;
   fieldset:last-child {
-    margin-bottom: 0; } }
+    margin-bottom: 0;
+  }
+}
 
 legend, fieldset legend {
   border: 0;
@@ -71,11 +88,13 @@ legend, fieldset legend {
   font-weight: 400;
   padding: 0 10px 0 0;
   white-space: normal;
-  *margin-left: -7px; }
+  *margin-left: -7px;
+}
 
 html.js fieldset.collapsed {
   background: transparent;
-  padding-top: 5px; }
+  padding-top: 5px;
+}
 
 // Inputs
 
@@ -84,93 +103,118 @@ input {
   max-width: 100%;
   &.text, &.title {
     border: 1px solid #ccc;
-    margin: 0; } }
+    margin: 0;
+  }
+}
 
 textarea, select {
   border: 1px solid #ccc;
-  margin: 0; }
+  margin: 0;
+}
 
 button::-moz-focus-inner, input::-moz-focus-inner {
   border: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 button {
   cursor: pointer;
   -webkit-appearance: button;
-  *overflow: visible; }
+  *overflow: visible;
+}
 
 input {
   &[type="button"], &[type="reset"], &[type="submit"] {
     cursor: pointer;
     -webkit-appearance: button;
-    *overflow: visible; } }
+    *overflow: visible;
+  }
+}
 
 button[disabled] {
-  cursor: default; }
+  cursor: default;
+}
 
 input {
   &[disabled] {
-    cursor: default; }
+    cursor: default;
+   }
   &.text, &.title {
-    padding: .5em; }
+    padding: .5em;
+  }
   &.form-text {
     border: 1px solid #ccc;
     height: auto;
-    padding: 2px; } }
+    padding: 0;
+  }
+}
 
 textarea {
   border: 1px solid #ccc;
   height: auto;
   padding: 2px;
-  font: 1em normal Arial, Helvetica, sans-serif; }
+  font: 1em normal Arial, Helvetica, sans-serif;
+}
 
 input {
-  font: 1em normal Arial, Helvetica, sans-serif; }
+  font: 1em normal Arial, Helvetica, sans-serif;
+}
 
 textarea {
   overflow: auto;
-  vertical-align: top; }
+  vertical-align: top;
+}
 
 div.resizable-textarea textarea {
-  margin-top: 0; }
+  margin-top: 0;
+}
 
 input {
   &[type="checkbox"], &[type="radio"] {
     box-sizing: border-box;
     padding: 0;
     *height: 13px;
-    *width: 13px; } }
+    *width: 13px;
+  }
+}
 
 // Addresses styling for 'hidden' attribute not present in IE7/8/9, FF3, S4
 [hidden] {
-  display: none; }
+  display: none;
+}
 
 // Tips for Drupal's input formats
 .tips {
   font-size: .857em;
   margin: 0 0 0 15px;
-  padding: 0; }
+  padding: 0;
+}
 
 .field-type-text-long fieldset {
   padding: 10px 0;
   .form-item {
     margin: 0;
-    padding: 0 0 0 15px; } }
+    padding: 0 0 0 15px;
+  }
+}
 
 fieldset .filter-help {
-  padding: 0 15px 5px; }
+  padding: 0 15px 5px;
+}
 
 .filter-guidelines {
   font-size: .923em;
   margin: 0;
-  padding: 5px 18px 10px; }
+  padding: 5px 18px 10px;
+}
 
 //
 // Password confirmation
 //
 
 .password-parent, .confirm-parent {
-  margin: 0; }
+  margin: 0;
+}
 
 //
 // Drupal's default login form block
@@ -180,25 +224,34 @@ fieldset .filter-help {
   text-align: left; /* LTR */
   ul {
     margin: 0;
-    padding: 0; }
+    padding: 0;
+  }
   li {
-    &.openid-link { }
-    &.user-link { } } }
+    &.openid-link {}
+    &.user-link {}
+  }
+}
 
 #user-login ul {
   margin: 0 0 5px;
   li {
-    margin: 0; } }
+    margin: 0;
+  }
+}
 
 #user-login-form {
   .item-list li {
     list-style: none;
-    margin: 0; }
+    margin: 0;
+  }
   li.openid-link {
-    background: none; } }
+    background: none;
+  }
+}
 
 #user-login li.openid-link {
-  background: none; }
+  background: none;
+}
 
 //
 // OpenID
@@ -210,23 +263,27 @@ fieldset .filter-help {
 // OpenID creates a new ul above the login form's links.
 #user-login-form ul {
   // Position OpenID's ul next to the rest of the links.
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
 
 // The "Log in using OpenID" link.
 html.js #user-login-form li.openid-link,
-#user-login-form li.openid-link { }
+#user-login-form li.openid-link {}
 
 // The "Cancel OpenID login" link.
-#user-login-form li.user-link { }
+#user-login-form li.user-link {}
 
 html.js #user-login-form li.openid-link {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 #user-login-form li {
   &.openid-link, &.user-link {
-    cursor: pointer; } }
+    cursor: pointer;
+  }
+}
 
-#user-login ul { }
+#user-login ul {}
 
 //
 // Search
@@ -237,11 +294,15 @@ input[type="search"] {
   -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
-    &::-webkit-search-decoration, &::-webkit-search-cancel-button {
-      -webkit-appearance: none; } }
+  &::-webkit-search-decoration,
+  &::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+  }
+}
 
 .panel-pane #search-block-form {
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+}
 
 //
 // Advanced search form
@@ -252,20 +313,26 @@ fieldset#edit-advanced fieldset {
   margin: 0 10px 10px 0;
   .fieldset-legend {
     background: none;
-    padding-left: 1em; } }
+    padding-left: 1em;
+  }
+}
 
 .advanced-search-submit {
-  clear: both; }
+  clear: both;
+}
 
 .search-advanced .criterion {
   float: none;
-  margin: 0 5px; }
+  margin: 0 5px;
+}
 
 #edit-keywords-fieldset .form-item:first-child {
-  margin-top: 5px; }
+  margin-top: 5px;
+}
 
 #search-form {
-  margin: 10px 0; }
+  margin: 10px 0;
+}
 
 //
 // Drupal admin tables
@@ -278,21 +345,30 @@ form {
   th {
     text-align: left; /* LTR */
     padding-right: 1em; /* LTR */
-    border-bottom: 3px solid #ccc; }
+    border-bottom: 3px solid #ccc;
+  }
   tbody {
-    border-top: 1px solid #ccc; }
+    border-top: 1px solid #ccc;
+  }
   tr.even {
-    background-color: #fff; }
+    background-color: #fff;
+  }
   table .item-list ul {
-    margin: 0; } }
+    margin: 0;
+  }
+}
 
 .lt-ie8 tr {
   &.even, &.odd {
     th, td {
       // IE doesn't display borders on table rows
-      border-bottom: 1px solid #ccc; } } }
+      border-bottom: 1px solid #ccc;
+    }
+  }
+}
 
 // Special case modules
 
 #devel-switch-user-form {
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
